feat: add ability to create slides from md
